forth/test/fail/test_cond_arity_else_mismatch.af
use' ../../lang.af

fun: .test_cond_arity_else_mismatch_fail { -- out }
  true .then 10 20 else 30 end
end
